# mav-px4-sim

./: .gitmodules  README.md  connection.md
src/: README.md
src/drone_description/: CMakeLists.txt  package.xml
src/drone_description/models/drone/: model.config  model.sdf
src/drone_description/models/realsense_d435/: model.sdf
src/drone_description/models/x500/: model.sdf
src/drone_description/models/x500_realsense/: igt_one.sdf
src/drone_gazebo/: CMakeLists.txt  package.xml
src/drone_gazebo/worlds/: bricks_room.sdf  default_custom.sdf  depot.sdf  empty_room.sdf  wall.sdf  warehouse.sdf
src/ground_truth/: package.xml  setup.py
src/ground_truth/ground_truth/: drone_ground_truth.py
src/ros_gz_example_description/hooks/: ros_gz_example_description.dsv.in
src/ros_gz_example_description/models/realsense_d435/: model.config  model.sdf
src/ros_gz_example_description/models/x500_depth/: model.sdf
src/ros_gz_example_description/models/x500_mono_cam/: model.sdf
src/ros_gz_example_description/models/x500_realsense/: model.config  model.sdf
src/ros_gz_example_gazebo/: CMakeLists.txt  package.xml
src/ros_gz_example_gazebo/worlds/: default_custom.sdf
src/tf_pcl_pub/: CMakeLists.txt  package.xml
src/tf_pcl_pub/src/: bunny_pcl_node.cpp  tf_pcl_pub_node.cpp
src/traj/: package.xml  setup.cfg  setup.py
src/traj/launch/: befaro.launch.py  launch_px4.py  orbit.launch.py  px4_env.launch.py  px4_sim.launch.py  realsense_drone.launch.py  sim_demo.launch.py  test_launch.py  visualization.launch.py  x500_realsense.launch.py
src/traj/resource/: traj_bridge.yaml  visualize.rviz
src/traj/traj/: arm_takeoff.py  drone_path_follower.py  land_disarm.py  offboard_control.py  offboard_takeoff.py  processes.py  px4_transform_pub.py  takeoff.py  visualizer.py
